--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 				<option value="asc" {% if sort_dir == 'asc' %}selected{% endif %}>По возрастанию</option>
 			</select>
 		</div>
-
+		<input type="text" name="filter" placeholder="Фильтр по нику" value="{{ filter_value or '' }}" class="input">
 		<button type="submit">Показать</button>
 	</form>
 
